--- a/src/app/features/results/results.component.scss
+++ b/src/app/features/results/results.component.scss
@@ -283,10 +283,6 @@
 // Sección del gráfico
 .chart-section {
   .chart-card {
-    background: $card-background;
-    border-radius: $radius-xl;
-    padding: $spacing-xl;
-    box-shadow: $shadow-lg;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -349,12 +345,29 @@
           border-top: 4px solid transparent;
           border-bottom: 4px solid transparent;
         }
+        &.horizontal {
+          transform: rotate(-45deg);
+        }
         
         &.vertical {
-          transform: rotate(90deg);
+          transform: rotate(-135deg);
         }
       }
     }
+  }
+}
+
+// Sección de candidatos
+.candidates-section {
+  .candidates-card {
+    background: $card-background;
+    border-radius: $radius-xl;
+    padding: $spacing-xl;
+    box-shadow: $shadow-lg;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
 
