Cambios, listo para beta

--- a/src/app/features/results/results.component.html
+++ b/src/app/features/results/results.component.html
@@ -173,13 +173,13 @@
                 </span>
               </div>
               <p class="party-description">{{ party.description }}</p>
-              <a *ngIf="party.websiteUrl" 
+              <!-- <a *ngIf="party.websiteUrl" 
                  [href]="party.websiteUrl" 
                  target="_blank" 
                  class="party-link">
                 Visitar sitio web
                 <i class="fas fa-arrow-right"></i>
-              </a>
+              </a> -->
             </div>
           </div>
         </div>
