--- a/src/app/features/results/results.component.scss
+++ b/src/app/features/results/results.component.scss
@@ -452,7 +452,7 @@
     .party-image {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain;
       transition: transform $transition-slow;
     }
     
@@ -611,9 +611,16 @@
       position: relative;
       padding-left: $spacing-lg;
       
-      i {
+      .quote-left {
         position: absolute;
         left: 0;
+        top: 0;
+        color: $color-secondary;
+        opacity: 0.3;
+      }
+      .quote-right {
+        position: absolute;
+        right: 0;
         top: 0;
         color: $color-secondary;
         opacity: 0.3;
