Cambios, correcion de forma

--- a/src/app/features/intro/intro.component.html
+++ b/src/app/features/intro/intro.component.html
@@ -51,6 +51,7 @@
       
       <!-- Scroll indicator -->
       <div class="scroll-indicator" (click)="scrollToContent()">
+        <p>Saber Más</p>
         <i class="fas fa-chevron-down"></i>
       </div>
     </div>
@@ -138,7 +139,7 @@
               <div class="ideology-icon">
                 <i class="fas fa-balance-scale"></i>
               </div>
-              <h3>Libertario</h3>
+              <h3>Liberal</h3>
             </div>
             <p>Alta libertad económica y personal</p>
             <div class="ideology-values">
