--- a/src/app/shared/components/question-card/question-card.component.html
+++ b/src/app/shared/components/question-card/question-card.component.html
@@ -13,7 +13,7 @@
   </div>
   
   <div class="question-content">
-    <h3 class="question-text">{{ question.text }}</h3>
+    <h3 class="question-text">"{{ question.text }}"</h3>
     
     <div class="answer-options">
       <div 
